Fix code so the custom quotes are dynamically added to the quotes list

--- a/style.css
+++ b/style.css
@@ -136,6 +136,10 @@ header h1 {
     background-color: #264653;
 }
 
+#quotes-list {
+    display: none;
+}
+
 /* Footer styles */
 footer {
     padding: 10px;
